<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/home"
        android:id="@+id/itHome"
        android:icon="@drawable/ic_baseline_home_24px"
        app:showAsAction="never"/>
    <item
        android:title="@string/profile"
        android:id="@+id/itProfile"
        android:icon="@drawable/ic_baseline_account_circle_24px"
        app:showAsAction="never"/>
    <item
        android:title="@string/setting"
        android:id="@+id/itSetting"
        android:icon="@drawable/ic_baseline_settings_applications_24px"
        app:showAsAction="never"/>
    <item
        android:title="@string/log_out"
        android:id="@+id/itLogout"
        android:icon="@drawable/ic_baseline_power_settings_new_24px"
        app:showAsAction="never"/>
</menu>