<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nông Nghiệp 4.0"
        android:textSize="40dp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginBottom="48dp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="true"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:autofillHints="true"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            tools:targetApi="o" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:columnCount="2">

        <android.support.design.button.MaterialButton
            android:id="@+id/btn_signIn"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            app:cornerRadius="10dp" />

        <TextView
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/forgot_password" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="24dp"
        android:text="@string/create_new_account" />

</LinearLayout>

