<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Nông Nghiệp 4.0"
        android:textSize="40dp"
        android:fontFamily="@font/roboto_medium"
        android:layout_marginBottom="48dp"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/hint_name"
            android:inputType="textEmailAddress"
            android:autofillHints="true"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:autofillHints="true"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:autofillHints="true"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/input_layout_repeat_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_repeat_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/hint_repeat_password"
            android:inputType="textPassword"
            android:autofillHints="true"
            tools:targetApi="o" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_columnWeight="1"
        android:layout_gravity="center_vertical"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        app:cornerRadius="10dp" />

    <TextView
        android:id="@+id/txt_already_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/already_account_login" />

</LinearLayout>

