<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/color_bg"
            android:orientation="vertical" />

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/sign_in"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout6">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/color_bg"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_launcher_background"
                android:background="@drawable/layout_bg"
                android:contentDescription="@string/glass_house"
                android:scaleType="centerCrop" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="8dp"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical"
            android:paddingTop="8dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/left_corner"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_account_circle_24px"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/edtEmailIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/right_corner"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="8dp"
                    tools:ignore="Autofill" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/left_corner"
                    android:padding="8dp"
                    android:src="@drawable/ic_lock_black_24dp"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/edtPassIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:background="@drawable/right_corner"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="8dp"
                    tools:ignore="Autofill" />
            </LinearLayout>
            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="330dp"
                android:layout_marginTop="0dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:background="@drawable/button_bg"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:padding="8dp" />
            <Button
                android:id="@+id/btnForgot"
                android:paddingTop="0dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:text="@string/forgot_password"/>
            <Button
                android:id="@+id/btnToSignup"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="30sp"
                android:background="@color/white"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:text="@string/switch_sign_up"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:paddingBottom="8dp"
                android:padding="8dp"
                android:background="@drawable/right_corner"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Or Login"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <ImageButton
                android:id="@+id/btnFacebook"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:background="@color/white"
                android:src="@drawable/ic_facebook_app_logo"
                tools:ignore="ContentDescription" />
            <ImageButton
                android:id="@+id/btnGoogle"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:background="@color/white"
                android:src="@drawable/ic_gmail_app_logo"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/probarIn"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:indeterminate="true"
            android:visibility="invisible" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>